typescript/tree-sitter-epochscript/test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

x = 0
y = 42
z = 12345

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (integer)))
  (assignment_statement
    (identifier)
    (expression
      (integer)))
  (assignment_statement
    (identifier)
    (expression
      (integer))))

================================================================================
Float literals - decimal
================================================================================

x = 3.14
y = 0.5
z = 10.

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (float)))
  (assignment_statement
    (identifier)
    (expression
      (float)))
  (assignment_statement
    (identifier)
    (expression
      (float))))

================================================================================
Float literals - scientific
================================================================================

x = 1e5
y = 2.5e-3
z = .5e10

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (float)))
  (assignment_statement
    (identifier)
    (expression
      (float)))
  (assignment_statement
    (identifier)
    (expression
      (float))))

================================================================================
String literals - single quoted
================================================================================

x = 'hello'

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (string
        (string_content_single)))))

================================================================================
String literals - double quoted
================================================================================

x = "hello"

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (string
        (string_content_double)))))

================================================================================
String literals - triple quoted
================================================================================

x = """multi
line"""

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (string
        (string_content_triple_double)))))

================================================================================
Boolean literals
================================================================================

x = True
y = False

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (true)))
  (assignment_statement
    (identifier)
    (expression
      (false))))

================================================================================
None literal
================================================================================

x = None

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (none))))

================================================================================
List literal
================================================================================

x = [1, 2, 3]

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (list_literal
        (expression
          (integer))
        (expression
          (integer))
        (expression
          (integer))))))

================================================================================
Empty list
================================================================================

x = []

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (list_literal))))

================================================================================
Tuple literal
================================================================================

x = (1, 2, 3)

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (tuple_literal
        (expression
          (integer))
        (expression
          (integer))
        (expression
          (integer))))))

================================================================================
Single element tuple
================================================================================

x = (1,)

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (tuple_literal
        (expression
          (integer))))))

================================================================================
Empty tuple
================================================================================

x = ()

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (tuple_literal))))

================================================================================
Timeframe literals - basic
================================================================================

x = 1D
y = 4H
z = 15Min

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (timeframe)))
  (assignment_statement
    (identifier)
    (expression
      (timeframe)))
  (assignment_statement
    (identifier)
    (expression
      (timeframe))))

================================================================================
Timeframe literals - with anchors
================================================================================

x = 1W-MON
y = 1W-FRI-Last
z = 1ME

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (timeframe)))
  (assignment_statement
    (identifier)
    (expression
      (timeframe)))
  (assignment_statement
    (identifier)
    (expression
      (timeframe))))
