typescript/tree-sitter-epochscript/test/corpus/statements.txt
================================================================================
Simple assignment
================================================================================

x = 42

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (integer))))

================================================================================
Assignment with expression
================================================================================

result = a + b

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (binary_expression
        (expression
          (identifier))
        (additive_operator)
        (expression
          (identifier))))))

================================================================================
Tuple pattern assignment
================================================================================

a, b, c = values

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (tuple_pattern
      (identifier)
      (identifier)
      (identifier))
    (expression
      (identifier))))

================================================================================
Expression statement
================================================================================

func()

--------------------------------------------------------------------------------

(module
  (expression_statement
    (expression
      (call_expression
        (expression
          (identifier))
        (argument_list)))))

================================================================================
Comment
================================================================================

# This is a comment
x = 1

--------------------------------------------------------------------------------

(module
  (comment)
  (assignment_statement
    (identifier)
    (expression
      (integer))))

================================================================================
Inline comment
================================================================================

x = 1  # inline comment

--------------------------------------------------------------------------------

(module
  (assignment_statement
    (identifier)
    (expression
      (integer)))
  (comment))
